Refactor: Update database schema and related logic
- Rename `Ponto` entity to `Clock` and add `dateStart` and `dateFinish` fields.
- Add `ClockHour` entity with relationship to `Clock`.
- Add `ClockWithHours` DTO to combine `Clock` and its `ClockHour` entries.
- Update `PontoDao` with methods to insert `Clock` and `ClockHour`, and query `ClockWithHours` by date.
- Add `Converters` for `LocalDate` and `Instant` Room type conversion.
- Update `DatabaseModule` to provide `PontoDao`.
- Update `PontoDatabase` to include new entities and `TypeConverters`.
- Update `ClockReducer`:
    - Add `SetTodayClock` event to handle `ClockWithHours` data.
    - Add `OnError` effect for error handling.
    - Add `todayClock` to `ClockState` to hold `OperationHandler<ClockWithHours>`.
- Update `ClockInViewmodel`:
    - Inject `PontoDao`.
    - Implement `loadTodayClock` to fetch and update UI with today's clock data.
- Add `OperationHandler` sealed class to `core:mvi` for managing operation states (Waiting, Loading, Success, Failure).
- Add `threetenabp` dependency for Java Time API backport.
- Update `minSdk` to 26 across multiple modules.
- Remove `core:mylibrary` module.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ material = "1.12.0"
 material-extendend = "1.7.8"
 material3 = "1.3.2"
 compose-navigation = "1.2.0"
+threetenabp = "1.4.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-extendend" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "compose-navigation" }
+threetenabp = { group = "com.jakewharton.threetenabp", name = "threetenabp", version.ref = "threetenabp" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
