--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,8 @@ material = "1.12.0"
 material-extendend = "1.7.8"
 material3 = "1.3.2"
 compose-navigation = "1.2.0"
-threetenabp = "1.4.6"
+material-adaptive = "1.2.0-alpha11"
+material3AdaptiveNavSuite = "1.3.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,8 +48,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-extendend" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "compose-navigation" }
-threetenabp = { group = "com.jakewharton.threetenabp", name = "threetenabp", version.ref = "threetenabp" }
-
+material-adaptive = { group =  "androidx.compose.material3.adaptive", name = "adaptive", version.ref = "material-adaptive" }
+material-adaptive-layout = { group =  "androidx.compose.material3.adaptive", name = "adaptive-layout", version.ref = "material-adaptive" }
+material-adaptive-navigation = { group =  "androidx.compose.material3.adaptive", name = "adaptive-navigation", version.ref = "material-adaptive" }
+androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavSuite" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -63,6 +66,12 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-room = [
     "androidx-room-runtime",
     "androidx-room-ktx"
+]
+material-adaptive = [
+    "material-adaptive",
+    "material-adaptive-layout",
+    "material-adaptive-navigation",
+    "androidx-material3-adaptive-navigation-suite"
 ]
 
 
