Refactor: Update UI padding and add Accompanist SystemUIController
- Update `App.kt`:
    - Apply `safeDrawingPadding()` to `Scaffold`, `PermanentNavigationDrawer`, and `ModalNavigationDrawer` to handle system insets.
- Add `accompanist-systemuicontroller` dependency to `gradle/libs.versions.toml`.
- Add `/build` to `core/utils/.gitignore`.
- Update `.idea/deploymentTargetSelector.xml`:
    - Set default deployment target to `Pixel_9_Pro_Fold` emulator for `composeApp` run configuration.
- Update iOS project user interface state.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -84,14 +84,13 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotation" }
+koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "ksp-koin" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "ksp-koin" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
 jetbrains-compose-icons-extended = { module = "org.jetbrains.compose.material3:material-icons-extended", version.ref = "compose-multiplatform-icon" }
 jetbrains-compose-icons = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "compose-multiplatform-icon" }
 jetbrains-compose-ui-graphics = { module = "org.jetbrains.compose.ui:ui-graphics", version.ref = "compose-multiplatform" }
-androidx-adaptive = { group = "androidx.compose.material3.adaptive", name = "adaptive", version.ref = "adaptive" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
