Refactor: Enhance UI for adaptive layouts and update dependencies
- Update `ClockInViewmodel.kt`:
    - Modify `loadTodayClock` to use `LocalDate` from `kotlinx-datetime` for querying by date, ensuring correct timezone handling.
    - Move `sendEventForEffect` for new clock creation into `withContext(Dispatchers.IO)` block.
- Update `App.kt`:
    - Implement adaptive UI based on `WindowSizeClass` to support different screen sizes (compact, medium, expanded).
    - Introduce `OnePanelTopBar` and `TwoPanelTopBar` for different layouts.
    - Refactor `NavigationButtons` and add `ExpandedNavigationButtons` for different navigation drawer states.
    - Add `DrawerOptions` composable for settings and preferences in the navigation drawer.
    - Use `IntrinsicSize.Min` for the width of the navigation drawer content in expanded mode.
    - Adjust layout modifiers for `ClockInScreenWrapper` and `ClockHistoryWrapper` based on screen size.
    - Replace generic icons in navigation with specific icons from `Routes`.
- Add `ExampleInstrumentedTest.kt` to `feature/clock`.
- Update `ClockDao.kt`:
    - Change `getClockByDate` parameter from `Instant` to `LocalDate`.
    - Change `insertClock` annotation from `@Upsert` to `@Insert(onConflict = OnConflictStrategy.REPLACE)`.
- Update `gradle/libs.versions.toml`:
    - Add `jetbrains-material-icon-extended` dependency.
- Update `shared/src/commonMain/kotlin/com/reringuy/shared/routes/Routes.kt`:
    - Add an `icon` property of type `ImageVector` to the `Routes` sealed class and its inheritors.
- Update `shared/build.gradle.kts` and `composeApp/build.gradle.kts`:
    - Add implementation for `libs.jetbrains.compose.icons.extended`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.1"
+agp = "8.12.2"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -27,6 +27,7 @@ jetbrainsKotlinJvm = "2.2.10"
 kotlinx-datetime = "0.7.1"
 androidx-lifecycle = "2.9.2"
 kotlinx-coroutines = "1.10.2"
+jetbrains-material-icon-extended = "1.7.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +59,7 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
 jetbrains-compose-icons = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "compose-multiplatform-icon" }
 jetbrains-compose-ui-graphics = { module = "org.jetbrains.compose.ui:ui-graphics", version.ref = "compose-multiplatform" }
+jetbrains-compose-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "jetbrains-material-icon-extended" }
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 
 [plugins]
